Fixed registration overflow

--- a/frontend/src/app/register/register-component/register.component.css
+++ b/frontend/src/app/register/register-component/register.component.css
@@ -8,6 +8,29 @@
     display: none !important;
 }
 
+@media only screen and (max-height: 720px) {
+    .content {
+        max-height: 550px;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+}
+
+#scroll-reg::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px white;
+    background-color: #F5F5F5;
+}
+
+#scroll-reg::-webkit-scrollbar {
+    width: 5px;
+    background-color: #F5F5F5;
+}
+
+#scroll-reg::-webkit-scrollbar-thumb {
+    background-color: #ffe6e6;
+    /* border: 2px solid #555555; */
+}
+
 .role-buttons {
     display: flex;
     justify-content: center;
